# samp-plugin-template

./: CMakeLists.txt  CMakePresets.json  README.md
lib/: NetGame.h  RakNet.h  utils.cpp  utils.h
lib/RakNet/: Addresses.h  BitStream.cpp  Hooks.cpp  Hooks.h  Packet.h  RPC.h  RakServer.h
lib/SDK/: plugin.h
src/: CMakeLists.txt  Native.cpp  Native.h  main.cpp  main.h
